--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==1.0.1
-numpy==1.20.1
-pickleshare==0.7.5
-Flask==1.1.1
-Jinja2==2.11.1
-scikit-learn==0.22.1
+pandas
+numpy
+pickleshare
+Flask
+Jinja2
+scikit-learn
